--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,15 +10,17 @@
 <h1>Latest posts</h1>
 
 <div class="posts-list">
-{{ with .Site.GetPage "/posts" }}
-    {{ range first 3 (sort .Data.Pages "Date" "desc" (where .Pages ".Params.private" "!=" true))}}
-        <div class="post">
-            <div class="date">{{ .PublishDate.Format "Jan. 2, 2006" }}</div>
-            <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
-            {{ .Summary }}
-        </div>    
+    {{ with .Site.GetPage "/posts" }}
+        {{ range first 3 (sort .Data.Pages "Date" "desc" (where .Pages ".Params.private" "!=" true))}}
+            <div class="post">
+                <p>
+                    <div class="date">{{ .PublishDate.Format "2006-01-02" }}</div>
+                    <h1><a href="{{ .Permalink }}" title="{{ .Title }}">{{ .Title }}</a></h1>
+                    {{ .Summary }}
+                </p>
+            </div>    
+        {{ end }}
     {{ end }}
-{{ end }}
 </div>
 
 {{ end }}
