--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="same-origin">
     <meta name="robots" content="noarchive,noimageindex">
-    <link rel="stylesheet" href="//unpkg.zhimg.com/terminal.css@0.7.1/dist/terminal.min.css">
-    <link rel="stylesheet" href="/css/console.min.css">
+    <link rel="stylesheet" href="//unpkg.zhimg.com/terminal.css@0.7.2/dist/terminal.min.css">
+    <style>:root{--display-h1-decoration:1;--page-width:62em;--global-font-size:16px}.title{font-size:large}.posts-list{position:relative;padding-left:130px}.posts-list .date{position:absolute;left:0}.post h1,.post h2{padding-top:0}.footer{margin-top:120px}.footer hr{border:none;height:1px;color:#000;background-color:#000;margin-bottom:.5em}</style>
     {{- partial "favicon.html" . -}}
     {{ with .OutputFormats.Get "RSS" }}
       {{ printf `<link href="%s" rel="%s" type="%s" title="%s" />` .Permalink .Rel .MediaType.Type $.Site.Title | safeHTML }}
@@ -21,12 +21,12 @@
 <body class="terminal">
   <div class="container">
       <div class="terminal-nav">
-        <header class="terminal-logo">
+        <div class="terminal-logo">
           <div class="logo terminal-prompt">
             {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
             {{ $.Scratch.Add "path" .Site.BaseURL }}
             <a href="{{ .Site.BaseURL }}" class="title no-style {{ with .Site.Params.TitleCutting }}site-name{{ end }}">{{ .Site.Title }}</a>:~# 
-            {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }}</div></header>
+            {{ range $index, $element := split $url "/" }}{{ $.Scratch.Add "path" $element }}{{ if ne $element "" }}<a href='{{ $.Scratch.Get "path" | absURL }}'>{{ . }}</a>/{{ $.Scratch.Add "path" "/" }}{{ end }}{{ end }}</div></div>
         <nav class="terminal-menu">
           <ul vocab="https://schema.org/" typeof="BreadcrumbList">
               {{ range .Site.Params.navlinks }}
